<resources>
    <string name="app_name">jobs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint">Your name:</string>
    <string name="enter_name">Enter your name</string>
    <string name="position_hint">Position:</string>
    <string name="enter_position">Enter position</string>
    <string name="location_hint">Location:</string>
    <string name="enter_location">Enter location</string>
    <string name="schedule_hint">Schedule:</string>
    <string name="save">Save</string>

    <string name="msg_1_handler_thread">Send a Runnable to a HandlerThread</string>
    <string name="msg_2_handler_thread">Send a Message to a HandlerThread</string>
    <string name="msg_3_thread_pool">Send 4 tasks to Thread Pool</string>
    <string name="msg_4_thread_pool">Send 8 tasks to Thread Pool</string>
    <string name="clearDisplay">Clear Messages</string>
    <string name="msg_7_thread_pool">Stop all threads in thread pool</string>
</resources>
