<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Fragment.ExecutorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_1"
            android:text="@string/msg_1_handler_thread"
            android:onClick="sendRunnableToHandlerThread"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_2"
            android:text="@string/msg_2_handler_thread"
            android:onClick="sendMessageToHandlerThread"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_3"
            android:text="@string/msg_3_thread_pool"
            android:onClick="send4tasksToThreadPool"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_4"
            android:text="@string/msg_4_thread_pool"
            android:onClick="send8TasksToThreadPool"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/send_msg_7"
            android:text="@string/msg_7_thread_pool"
            android:onClick="cancelAllTasksInThreadPool"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/clear"
            android:text="@string/clearDisplay"
            android:onClick="clearDisplay"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/display"
            android:freezesText="true"/>
    </LinearLayout>
</ScrollView>